fixed several css flukes caused by bootstrap removal. List pane is misbehaving and overflows off the page at 100 percent height so I've set the height to 500px for now

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,36 +1,80 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+h1{
+  color: #29335C;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 20px;
+}
+
+a:visited{
+  color: #1DB954;
+}
+
+#mainWrap{
+  margin-bottom: 50px;
+}
+
+
 #header {
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   height: 60px;
-  background-color: #000000;
+  background-color: #94B9AF;
   border-style: solid;
-  border-color: #1db954;
+  border-color: #94B9AF;
   border-width: 0px 0px 5px 0px;
+  /* z-index:2; */
+}
+
+#footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width:100%;
+  height: 25px;
+  background-color: #94B9AF;
+}
+
+#icon{
+  height: 55px;
+  margin-left: 10px;
+  margin-top: 2px;
+  display: inline-block;
 }
 
 #listPane{
-  background-color:#000000;
-  color:#1db954;
+  background-color: #000000;
+  color: #94B9AF;
   /* flex: 0 0 50%; */
-  height:100%;
+  height: 100%;
   position: fixed;
   overflow: auto;
   width: 400px;
-  margin-top: 60px;
-  /* height: 400px; */
+  /* margin-top: 60px; */
+  /* padding-bottom: 50px; */
+  padding-top: 5px;
+  height: 500px;
   border-style: solid;
-  border-color: #1db954;
-  border-width: 0px 5px 0px 0px;
+  border-color: #94B9AF;
+  border-width: 0px 5px 5px 5px;
+  z-index: 1;
 }
 
 #infoPane{
-  position:fixed;
-  background-color:#000000;
-  flex: 1;
-  margin-left:400px;
-  margin-top: 60px;
+  position: fixed;
+  background-color: #000000;
+  /* flex: 1; */
+  padding-left: 420px;
+  /* margin-top: 60px; */
+  /* padding-left: 10px; */
+  padding-top: 10px;
   width: 100%;
   height: 100%;
+  /* z-index: -1; */
 }
 
 #login {
@@ -51,15 +95,17 @@
 
 #trackList{
   list-style-type: none;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
 }
 
 .playlistItem{
-  padding-top:2px;
-  padding-bottom:2px;
+  font-size: 16px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 10px;
   border-style: solid;
-  border-color: #1db954;
+  border-color: #94B9AF;
   border-width: 0px 0px 3px 0px;
 }
 
@@ -68,4 +114,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   width: 500px;
+}
+
+.trackArtist{
+  font-style: italic;
+  font-size: 12px;
+  color: #56CBF9;
 }
